fix: remove unnecessary text wrap

--- a/webapp/src/app/details/overview/overview.component.scss
+++ b/webapp/src/app/details/overview/overview.component.scss
@@ -354,7 +354,6 @@
             justify-content: space-between;
             gap: 5px;
             h4 {
-              text-wrap: nowrap;
               &:first-child {
                 font-weight: 350;
                 font-size: 12px;
